package api

import (
	"context"
	"log"
)

// EdgeServiceImpl 边缘服务gRPC实现
type EdgeServiceImpl struct {
	UnimplementedEdgeServiceServer
}

// HealthCheck 实现健康检查接口
func (s *EdgeServiceImpl) HealthCheck(ctx context.Context, req *HealthCheckRequest) (*HealthCheckResponse, error) {
	log.Println("HealthCheck called")
	return &HealthCheckResponse{
		Status:  HealthCheckResponse_SERVING,
		Service: "jarvis-edge",
		Version: "1.0.0",
	}, nil
}

// GetStatus 实现状态查询接口
func (s *EdgeServiceImpl) GetStatus(ctx context.Context, req *StatusRequest) (*StatusResponse, error) {
	log.Println("GetStatus called")
	return &StatusResponse{
		Component: "edge-agent",
		Status:    "running",
		Version:   "1.0.0",
		Metrics: map[string]string{
			"grpc_connections": "0",
			"http_requests":    "0",
		},
	}, nil
}

// StreamAudio 实现音频流处理接口
func (s *EdgeServiceImpl) StreamAudio(stream EdgeService_StreamAudioServer) error {
	log.Println("StreamAudio called")
	// 简单实现：接收并记录音频请求，返回模拟响应
	for {
		req, err := stream.Recv()
		if err != nil {
			log.Printf("StreamAudio receive error: %v", err)
			return err
		}
		
		log.Printf("Received audio data: %d bytes, format: %s, sample rate: %d", 
			len(req.AudioData), req.Format, req.SampleRate)
		
		// 返回模拟响应
		resp := &AudioResponse{
			Result:     "模拟识别结果",
			Confidence: 0.95,
		}
		
		if err := stream.Send(resp); err != nil {
			log.Printf("StreamAudio send error: %v", err)
			return err
		}
	}
}

// DetectHardware 实现硬件检测接口
func (s *EdgeServiceImpl) DetectHardware(ctx context.Context, req *DetectHardwareRequest) (*DetectHardwareResponse, error) {
	log.Println("DetectHardware called")
	// 模拟实现：返回硬件信息
	return &DetectHardwareResponse{
		ChipType:        "CPU",
		ChipModel:       "Intel Core i7-11700K",
		Vendor:          "Intel",
		Cores:           8,
		Memory:          16 * 1024 * 1024 * 1024, // 16GB
		SupportsInt8:    true,
		SupportsFp16:    true,
		SupportsTensorrt: false,
		SupportsOpenvino: true,
		Details: map[string]string{
			"cpu_architecture": "x86_64",
			"operating_system": "Windows 10",
			"available_memory": "12GB",
		},
	}, nil
}

// OptimizeModel 实现模型优化接口
func (s *EdgeServiceImpl) OptimizeModel(ctx context.Context, req *OptimizeModelRequest) (*OptimizeModelResponse, error) {
	log.Printf("OptimizeModel called for model: %s", req.ModelPath)
	// 模拟实现：返回模型优化结果
	return &OptimizeModelResponse{
		Success:            true,
		OptimizedModelPath: "/opt/models/optimized/model.onnx",
		OriginalSize:       128.5,
		OptimizedSize:      32.1,
		OptimizationRatio:  0.25,
		Metrics: map[string]string{
			"inference_time": "15ms",
			"throughput":     "66.7 FPS",
			"memory_usage":   "256MB",
		},
	}, nil
}

// GetOptimizedModel 实现获取优化模型接口
func (s *EdgeServiceImpl) GetOptimizedModel(ctx context.Context, req *GetOptimizedModelRequest) (*GetOptimizedModelResponse, error) {
	log.Printf("GetOptimizedModel called for model: %s, chip: %s", req.ModelName, req.ChipType)
	// 模拟实现：返回优化模型信息
	return &GetOptimizedModelResponse{
		Success:           true,
		ModelPath:         "/opt/models/optimized/" + req.ModelName + "_" + req.ChipType + ".onnx",
		ModelUrl:          "https://models.example.com/" + req.ModelName + "_" + req.ChipType + ".onnx",
		ModelVersion:      "1.0.0",
		OptimizationLevel: req.OptimizationLevel,
		ModelInfo: map[string]string{
			"model_type":     "vision",
			"input_shape":    "[1, 3, 224, 224]",
			"output_shape":   "[1, 1000]",
			"quantization":   "INT8",
		},
	}, nil
}

// RunInference 实现运行推理接口
func (s *EdgeServiceImpl) RunInference(ctx context.Context, req *RunInferenceRequest) (*RunInferenceResponse, error) {
	log.Printf("RunInference called for model: %s", req.ModelPath)
	
	// 处理硬件加速
	accelerationType := "none"
	if req.EnableHardwareAcceleration {
		accelerationType = req.AccelerationType
		if accelerationType == "" {
			accelerationType = "auto"
		}
		log.Printf("启用硬件加速: %s", accelerationType)
	}
	
	// 模拟实现：返回推理结果
	return &RunInferenceResponse{
		Success:       true,
		Outputs: map[string][]byte{
			"output": []byte{0x01, 0x02, 0x03, 0x04},
		},
		InferenceTime:    12.5,
		UsedAcceleration: accelerationType,
		EnergyConsumption: 5.2, // 模拟能耗
	}, nil
}

// ManageEnergy 实现能耗管理接口
func (s *EdgeServiceImpl) ManageEnergy(ctx context.Context, req *EnergyManagementRequest) (*EnergyManagementResponse, error) {
	log.Printf("ManageEnergy called with mode: %s, max power budget: %f", req.Mode, req.MaxPowerBudget)
	
	// 模拟实现：返回能耗管理结果
	return &EnergyManagementResponse{
		Success:           true,
		CurrentMode:       req.Mode,
		CurrentPowerBudget: req.MaxPowerBudget,
		EnergyStatistics: map[string]float64{
			"total_energy":     100.5,
			"average_power":    50.2,
			"peak_power":       75.8,
			"energy_per_inference": 2.5,
		},
	}, nil
}

// ConfigureHardwareAcceleration 实现硬件加速配置接口
func (s *EdgeServiceImpl) ConfigureHardwareAcceleration(ctx context.Context, req *HardwareAccelerationRequest) (*HardwareAccelerationResponse, error) {
	log.Printf("ConfigureHardwareAcceleration called for type: %s, enable: %t", req.AccelerationType, req.Enable)
	
	// 模拟实现：返回硬件加速配置结果
	return &HardwareAccelerationResponse{
		Success:          true,
		AccelerationType: req.AccelerationType,
		Enabled:          req.Enable,
		Configuration:    req.Configuration,
	}, nil
}

// GetHardwareCapabilities 实现获取硬件能力接口
func (s *EdgeServiceImpl) GetHardwareCapabilities(ctx context.Context, req *GetHardwareCapabilitiesRequest) (*GetHardwareCapabilitiesResponse, error) {
	log.Printf("GetHardwareCapabilities called with detailed: %t", req.Detailed)
	
	// 模拟实现：返回硬件能力列表
	capabilities := []*HardwareCapability{
		{
			Type:            "CPU",
			Model:           "Intel Core i7-11700K",
			Vendor:          "Intel",
			Cores:           8,
			Memory:          16 * 1024 * 1024 * 1024, // 16GB
			SupportsInt8:    true,
			SupportsFp16:    true,
			SupportsTensorrt: false,
			SupportsOpenvino: true,
			SupportsCuda:    false,
			SupportsNnapi:   false,
			Features: map[string]string{
				"architecture": "x86_64",
				"instruction_set": "AVX2",
			},
			Performance: map[string]float64{
				"compute_score": 85.5,
				"memory_bandwidth": 51.2,
			},
		},
		{
			Type:            "GPU",
			Model:           "NVIDIA RTX 3080",
			Vendor:          "NVIDIA",
			Cores:           8704,
			Memory:          10 * 1024 * 1024 * 1024, // 10GB
			SupportsInt8:    true,
			SupportsFp16:    true,
			SupportsTensorrt: true,
			SupportsOpenvino: false,
			SupportsCuda:    true,
			SupportsNnapi:   false,
			Features: map[string]string{
				"architecture": "Ampere",
				"cuda_version": "11.7",
			},
			Performance: map[string]float64{
				"compute_score": 98.2,
				"memory_bandwidth": 760.3,
			},
		},
	}
	
	return &GetHardwareCapabilitiesResponse{
		Success:      true,
		Capabilities: capabilities,
	}, nil
}
